Update swagger.yaml and the v1 controlle for sis cases.
